// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider applies theme and style props 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "hsl(0, 0%, 0%)",
          "flex": 1,
          "height": 0.5,
        },
        {
          "backgroundColor": "blue",
        },
      ]
    }
    testID="amplify__divider__line"
  />
  <Text
    accessibilityRole="text"
    style={
      [
        {
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        {
          "color": "hsl(210, 50%, 10%)",
        },
        [
          {
            "fontSize": 16,
            "margin": 16,
            "textAlign": "center",
          },
          {
            "color": "red",
          },
        ],
      ]
    }
  >
    Divider label
  </Text>
  <View
    style={
      [
        {
          "backgroundColor": "hsl(0, 0%, 0%)",
          "flex": 1,
          "height": 0.5,
        },
        {
          "backgroundColor": "blue",
        },
      ]
    }
  />
</View>
`;

exports[`Divider renders as expected with label 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "hsl(0, 0%, 0%)",
          "flex": 1,
          "height": 0.5,
        },
        undefined,
      ]
    }
    testID="amplify__divider__line"
  />
  <Text
    accessibilityRole="text"
    style={
      [
        {
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        {
          "color": "hsl(210, 50%, 10%)",
        },
        [
          {
            "fontSize": 16,
            "margin": 16,
            "textAlign": "center",
          },
          undefined,
        ],
      ]
    }
  >
    Divider label
  </Text>
  <View
    style={
      [
        {
          "backgroundColor": "hsl(0, 0%, 0%)",
          "flex": 1,
          "height": 0.5,
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`Divider renders as expected without label 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "hsl(0, 0%, 0%)",
          "flex": 1,
          "height": 0.5,
        },
        undefined,
      ]
    }
    testID="amplify__divider__line"
  />
</View>
`;
